<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/base_margin_or_padding"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/containerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/base_margin_or_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_info_name"
                android:textColor="@color/base_text_color"
                android:textSize="@dimen/small_text_size" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/base_margin_or_padding"
                android:textColor="@color/base_text_color"
                android:textSize="@dimen/small_text_size"
                tools:text="Заголовок" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/base_margin_or_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_info_description"
                android:textColor="@color/base_text_color"
                android:textSize="@dimen/small_text_size" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/base_margin_or_padding"
                android:textColor="@color/base_text_color"
                android:textSize="@dimen/small_text_size"
                tools:text="Описание" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_info_rating"
                android:textColor="@color/base_text_color"
                android:textSize="@dimen/small_text_size" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/base_margin_or_padding"
                android:textColor="@color/base_text_color"
                android:textSize="@dimen/small_text_size"
                tools:text="0.0" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>