<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_motion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue_opacity_08"
    app:layoutDescription="@xml/fragment_one_movie_scene"
    tools:context=".fragments.oneMovie.OneMovieFragment">

    <ProgressBar
        android:id="@+id/loader"
        style="?attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/defaultPlaceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_state_movie_info"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--  image with overlay  -->
    <ImageView
        android:id="@+id/card_image"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:contentDescription="image_view"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@mipmap/ic_launcher" />

    <View
        android:id="@+id/card_image_overlay"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:background="@drawable/grey_overlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--  control buttons  -->
    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:background="@drawable/background_opacity_btn"
        android:src="@drawable/left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--    -->
    <LinearLayout
        android:id="@+id/overlay_content_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/base_margin_or_padding"
        android:paddingEnd="@dimen/base_margin_or_padding"
        app:layout_constraintBottom_toBottomOf="@id/card_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/containerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/base_margin_or_padding"
            android:orientation="horizontal"
            android:paddingEnd="80dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_info_name"
                android:textColor="@color/base_text_color"
                android:textSize="@dimen/small_text_size" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/base_margin_or_padding"
                android:textColor="@color/base_text_color"
                android:textSize="@dimen/small_text_size"
                tools:text="Бла бла" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/base_margin_or_padding"
            android:orientation="horizontal"
            android:paddingEnd="80dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_info_rating"
                android:textColor="@color/base_text_color"
                android:textSize="@dimen/small_text_size" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/base_margin_or_padding"
                android:textColor="@color/base_text_color"
                android:textSize="@dimen/small_text_size"
                tools:text="0.0" />
        </LinearLayout>

        <TextView
            android:id="@+id/card_year_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/base_margin_or_padding"
            android:textColor="@color/base_text_color"
            android:textSize="@dimen/small_text_size"
            tools:text="Year" />

        <TextView
            android:id="@+id/card_short_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/base_margin_or_padding"
            android:textColor="@color/base_text_color"
            android:textSize="@dimen/small_text_size"
            tools:text="Short Description" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_content_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/base_margin_or_padding"
        android:paddingEnd="@dimen/base_margin_or_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overlay_content_card">

        <TextView
            android:id="@+id/card_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/base_margin_or_padding"
            android:textColor="@color/base_text_color"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:text="Description" />

        <TextView
            android:id="@+id/card_staff_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/base_margin_or_padding"
            android:textColor="@color/base_text_color"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            android:text="@string/card_staff_placeholder" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/actor_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="horizontal"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"
            tools:listitem="@layout/actor_card" />
    </LinearLayout>

</androidx.constraintlayout.motion.widget.MotionLayout>